--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -2,13 +2,40 @@ body {
   color: orange;
 }
 
-.middle {
-  background: #e1e1e1;
-  height: 100vh;
+.hi {
+  border: 2px solid black;
 }
 
-.container canvas {
-  border: 3px solid red !important;
+.home-panel {
+  height: 100vh;
+  background: lavender;
+}
+
+.home-col-center {
+  background: #e1e1e1;
+}
+
+.home-col-left {
+  background: #bbb;
+}
+
+.home-col-right {
+  background: #999;
+}
+
+.vx {
+  flex: 1;
+  border: 2px solid orange;
+}
+
+.test {
+  border: 3px solid green !important;
+}
+
+.canvas-container canvas {
+  border: 1px solid red !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .level1 {
